force-app/main/default/objects/Opportunity/fields/Account_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Value__c</fullName>
    <label>Account Credit Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>