force-app/main/default/objects/Opportunity/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Street</fullName>
            </value>
            <value>
                <fullName>Agnes Quik</fullName>
            </value>
            <value>
                <fullName>Aileen Pickering</fullName>
            </value>
            <value>
                <fullName>Albero Forni</fullName>
            </value>
            <value>
                <fullName>Alexandra Schiller</fullName>
            </value>
            <value>
                <fullName>Alex Ching</fullName>
            </value>
            <value>
                <fullName>Andreas Bernard</fullName>
            </value>
            <value>
                <fullName>Andrew Tailor</fullName>
            </value>
            <value>
                <fullName>Anja Schnuchel</fullName>
            </value>
            <value>
                <fullName>Annop Bucha</fullName>
            </value>
            <value>
                <fullName>Baris Demirci</fullName>
            </value>
            <value>
                <fullName>Barry Griffith</fullName>
            </value>
            <value>
                <fullName>Bernhard Streuer</fullName>
            </value>
            <value>
                <fullName>Bjarne Jodahl</fullName>
            </value>
            <value>
                <fullName>Bjorn Slinning</fullName>
            </value>
            <value>
                <fullName>BL Kwok</fullName>
            </value>
            <value>
                <fullName>Bobby Hood</fullName>
            </value>
            <value>
                <fullName>Brendan Hunt</fullName>
            </value>
            <value>
                <fullName>Bryan Hayes</fullName>
            </value>
            <value>
                <fullName>Bryan Stonehouse</fullName>
            </value>
            <value>
                <fullName>Burin Thanapiyawanich</fullName>
            </value>
            <value>
                <fullName>Chanintakul Kamonwat</fullName>
            </value>
            <value>
                <fullName>Chayapha Fon Techaamornsin</fullName>
            </value>
            <value>
                <fullName>Chin-Hwee Lim</fullName>
            </value>
            <value>
                <fullName>Chiu Tanny</fullName>
            </value>
            <value>
                <fullName>Cindy Chew</fullName>
            </value>
            <value>
                <fullName>Clarence San</fullName>
            </value>
            <value>
                <fullName>Corinna Pane</fullName>
            </value>
            <value>
                <fullName>Cor Vink</fullName>
            </value>
            <value>
                <fullName>Damri Tresukosol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>