force-app/main/default/objects/Opportunity/fields/Achieved_Price__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Price__c</fullName>
    <label>Achieved USD Price</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>