force-app/main/default/objects/Opportunity/fields/Action_Party__c.field-meta.xml
<CustomField>
    <fullName>Action_Party__c</fullName>
    <description>Who holds the current action?</description>
    <label>Action Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Derivs CA</fullName>
            </value>
            <value>
                <fullName>ISDA Team</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>