force-app/main/default/objects/Opportunity/fields/Actual_Delivery_Date_of_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date_of_Allowances__c</fullName>
    <label>Actual Delivery Date of Allowances</label>
    <type>Date</type>
</CustomField>