force-app/main/default/objects/Opportunity/fields/Actual_Payment_Date_STASCO_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Actual_Payment_Date_STASCO_Invoice__c</fullName>
    <label>Actual Payment Date - STASCO Invoice</label>
    <type>Date</type>
</CustomField>