force-app/main/default/objects/Opportunity/fields/Actual_Product__c.field-meta.xml
<CustomField>
    <fullName>Actual_Product__c</fullName>
    <label>Actual Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bay CARB ULSD</fullName>
            </value>
            <value>
                <fullName>CHI ULSD</fullName>
            </value>
            <value>
                <fullName>G3 LSD</fullName>
            </value>
            <value>
                <fullName>G3 ULSD</fullName>
            </value>
            <value>
                <fullName>GC HSD</fullName>
            </value>
            <value>
                <fullName>GC LSD</fullName>
            </value>
            <value>
                <fullName>GC ULSD</fullName>
            </value>
            <value>
                <fullName>LA CARB ULSD</fullName>
            </value>
            <value>
                <fullName>NYH HSD</fullName>
            </value>
            <value>
                <fullName>NYH ULSD</fullName>
            </value>
            <value>
                <fullName>PNW ULSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>