force-app/main/default/objects/Opportunity/fields/Additional_Aviation_Margin__c.field-meta.xml
<CustomField>
    <fullName>Additional_Aviation_Margin__c</fullName>
    <label>Additional Aviation Margin</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>