force-app/main/default/objects/Opportunity/fields/Addv_Order__c.field-meta.xml
<CustomField>
    <fullName>Addv_Order__c</fullName>
    <description>This was changed from Addv Order as per Kris O&apos;grady request</description>
    <label>IO Contract</label>
    <length>9</length>
    <type>Text</type>
</CustomField>