force-app/main/default/objects/Opportunity/fields/Addv_price__c.field-meta.xml
<CustomField>
    <fullName>Addv_price__c</fullName>
    <label>Addv price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>