force-app/main/default/objects/Opportunity/fields/Allowance_Date__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Date__c</fullName>
    <label>Allowance Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dec 2011</fullName>
            </value>
            <value>
                <fullName>Dec 2012</fullName>
            </value>
            <value>
                <fullName>Dec 2014</fullName>
            </value>
            <value>
                <fullName>Sep 2012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>