force-app/main/default/objects/Opportunity/fields/Amount_Incl_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Amount_Incl_Service_Fee__c</fullName>
    <formula>Amount+Service_Fee_RMK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Incl. Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>