force-app/main/default/objects/Opportunity/fields/Amt__c.field-meta.xml
<CustomField>
    <fullName>Amt__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>