force-app/main/default/objects/Opportunity/fields/Approval_Support_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Approval_Support_Obtained__c</fullName>
    <inlineHelpText>Please save the approvals and support if required.</inlineHelpText>
    <label>Approval &amp; Support Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>