force-app/main/default/objects/Opportunity/fields/Available_line__c.field-meta.xml
<CustomField>
    <fullName>Available_line__c</fullName>
    <description>M2M available for customer at time of trade</description>
    <label>Available line</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>