force-app/main/default/objects/Opportunity/fields/Average_Margin__c.field-meta.xml
<CustomField>
    <fullName>Average_Margin__c</fullName>
    <description>Average Margin for the US</description>
    <label>Average Margin</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>