force-app/main/default/objects/Opportunity/fields/Barge_Fee_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Barge_Fee_per_Unit__c</fullName>
    <label>Barge Fee per Unit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>