force-app/main/default/objects/Opportunity/fields/Basis_cpg_swap__c.field-meta.xml
<CustomField>
    <fullName>Basis_cpg_swap__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Basis cpg (swap)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>