force-app/main/default/objects/Opportunity/fields/Bbls__c.field-meta.xml
<CustomField>
    <fullName>Bbls__c</fullName>
    <description>US text</description>
    <label>Bbls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>