force-app/main/default/objects/Opportunity/fields/BO_Analyst__c.field-meta.xml
<CustomField>
    <fullName>BO_Analyst__c</fullName>
    <label>BO Analyst</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gopinath KA</fullName>
            </value>
            <value>
                <fullName>Swathi UM</fullName>
            </value>
            <value>
                <fullName>Chandramouli J</fullName>
            </value>
            <value>
                <fullName>Manesh Lakshman</fullName>
            </value>
            <value>
                <fullName>Rekha Narayana Rao</fullName>
            </value>
            <value>
                <fullName>Sreejith Krishnan</fullName>
            </value>
            <value>
                <fullName>Tharani. D</fullName>
            </value>
            <value>
                <fullName>Periyasami P</fullName>
            </value>
            <value>
                <fullName>Mohan, Anjali C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>