force-app/main/default/objects/Opportunity/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RMB/AV</fullName>
            </value>
            <value>
                <fullName>RMB/BIT</fullName>
            </value>
            <value>
                <fullName>RMB/CF</fullName>
            </value>
            <value>
                <fullName>RMB/CHEM</fullName>
            </value>
            <value>
                <fullName>RMB/FLT</fullName>
            </value>
            <value>
                <fullName>RMB/LPG</fullName>
            </value>
            <value>
                <fullName>RMB/REF</fullName>
            </value>
            <value>
                <fullName>RMB/TSP</fullName>
            </value>
            <value>
                <fullName>RMK/AV</fullName>
            </value>
            <value>
                <fullName>RMK/AV-P</fullName>
            </value>
            <value>
                <fullName>RMK/CF</fullName>
            </value>
            <value>
                <fullName>RMK/CF-P</fullName>
            </value>
            <value>
                <fullName>RMK/CHEM</fullName>
            </value>
            <value>
                <fullName>RMK/CHEM-P</fullName>
            </value>
            <value>
                <fullName>RMK/FIN</fullName>
            </value>
            <value>
                <fullName>RMK/LPG</fullName>
            </value>
            <value>
                <fullName>RMK/LT</fullName>
            </value>
            <value>
                <fullName>RMK/MAR</fullName>
            </value>
            <value>
                <fullName>RMK/MAR-P</fullName>
            </value>
            <value>
                <fullName>RMK/OTHER</fullName>
            </value>
            <value>
                <fullName>RMK/OTHER-P</fullName>
            </value>
            <value>
                <fullName>RMK/REF</fullName>
            </value>
            <value>
                <fullName>RMK/REF-P</fullName>
            </value>
            <value>
                <fullName>RMK/RMH</fullName>
            </value>
            <value>
                <fullName>RMK/UTIL</fullName>
            </value>
            <value>
                <fullName>RMK/UTIL-P</fullName>
            </value>
            <value>
                <fullName>ST6/AV</fullName>
            </value>
            <value>
                <fullName>ST6/CHEM</fullName>
            </value>
            <value>
                <fullName>ST6/FINANCIALS</fullName>
            </value>
            <value>
                <fullName>ST6/INDUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>