force-app/main/default/objects/Opportunity/fields/BTB_Trade_desk__c.field-meta.xml
<CustomField>
    <fullName>BTB_Trade_desk__c</fullName>
    <description>STUSCO trade desk for BTB deal</description>
    <label>BTB Trade desk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude Swaps</fullName>
            </value>
            <value>
                <fullName>Crude Options</fullName>
            </value>
            <value>
                <fullName>Crude Basis</fullName>
            </value>
            <value>
                <fullName>Crude P+</fullName>
            </value>
            <value>
                <fullName>Nat Gas Swaps</fullName>
            </value>
            <value>
                <fullName>Nat Gas Options</fullName>
            </value>
            <value>
                <fullName>Nat Gas Basis Swaps</fullName>
            </value>
            <value>
                <fullName>Nat Gas Basis Options</fullName>
            </value>
            <value>
                <fullName>Gasoline Swaps</fullName>
            </value>
            <value>
                <fullName>Gasoline Options</fullName>
            </value>
            <value>
                <fullName>Heating Oil Swaps</fullName>
            </value>
            <value>
                <fullName>Heating Oil Options</fullName>
            </value>
            <value>
                <fullName>Jet Swaps</fullName>
            </value>
            <value>
                <fullName>Jet Options</fullName>
            </value>
            <value>
                <fullName>Propane Swaps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>