force-app/main/default/objects/Opportunity/fields/BTB_trader__c.field-meta.xml
<CustomField>
    <fullName>BTB_trader__c</fullName>
    <label>BTB DEX ref (internal)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>