force-app/main/default/objects/Opportunity/fields/BTB_with__c.field-meta.xml
<CustomField>
    <fullName>BTB_with__c</fullName>
    <label>BTB with</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Freight clean (P22)</fullName>
            </value>
            <value>
                <fullName>Freight dirty (STC42)</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>P21</fullName>
            </value>
            <value>
                <fullName>P22</fullName>
            </value>
            <value>
                <fullName>P23</fullName>
            </value>
            <value>
                <fullName>P24</fullName>
            </value>
            <value>
                <fullName>P26</fullName>
            </value>
            <value>
                <fullName>P31</fullName>
                <default>true</default>
                <label>P31</label>
            </value>
            <value>
                <fullName>SIETCO</fullName>
            </value>
            <value>
                <fullName>ST1</fullName>
            </value>
            <value>
                <fullName>ST1/CRUDE</fullName>
            </value>
            <value>
                <fullName>ST2</fullName>
            </value>
            <value>
                <fullName>ST2/CRUDE</fullName>
            </value>
            <value>
                <fullName>ST2/ST3</fullName>
            </value>
            <value>
                <fullName>ST3</fullName>
            </value>
            <value>
                <fullName>ST3/CRUDE</fullName>
            </value>
            <value>
                <fullName>ST4</fullName>
            </value>
            <value>
                <fullName>ST4/CRUDE</fullName>
            </value>
            <value>
                <fullName>STUSCO</fullName>
            </value>
            <value>
                <fullName>P28</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>ST7</fullName>
            </value>
            <value>
                <fullName>RMF</fullName>
            </value>
            <value>
                <fullName>BUKOM</fullName>
            </value>
            <value>
                <fullName>STC</fullName>
            </value>
            <value>
                <fullName>P3CHEM</fullName>
            </value>
            <value>
                <fullName>DSCHEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>