force-app/main/default/objects/Opportunity/fields/Buy_close_date__c.field-meta.xml
<CustomField>
    <fullName>Buy_close_date__c</fullName>
    <label>Buy close date</label>
    <type>Date</type>
</CustomField>