force-app/main/default/objects/Opportunity/fields/Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price__c</fullName>
    <label>Buy Price</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>