force-app/main/default/objects/Opportunity/fields/Buy_Sell__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell__c</fullName>
    <description>Identifies if this Opportunity is a Sell, Buy or Swap, etc.</description>
    <label>Type Of Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Throughput</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Swap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>