force-app/main/default/objects/Opportunity/fields/Buy_start_date__c.field-meta.xml
<CustomField>
    <fullName>Buy_start_date__c</fullName>
    <defaultValue>DATE(Year(Today()), Month(Today())+1, 1)</defaultValue>
    <label>Buy start date</label>
    <type>Date</type>
</CustomField>