force-app/main/default/objects/Opportunity/fields/Buy_volume_MT__c.field-meta.xml
<CustomField>
    <fullName>Buy_volume_MT__c</fullName>
    <label>Buy volume MT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>