force-app/main/default/objects/Opportunity/fields/C3_2008_2011__c.field-meta.xml
<CustomField>
    <fullName>C3_2008_2011__c</fullName>
    <formula>if(Year__c=2008,Amount,0+if(Year__c=2009,Amount,0+if(Year__c=2010,Amount,0+if(Year__c=2011,Amount,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C3 2008-2011</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>