force-app/main/default/objects/Opportunity/fields/Cleared_for__c.field-meta.xml
<CustomField>
    <fullName>Cleared_for__c</fullName>
    <label>Cleared for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>