force-app/main/default/objects/Opportunity/fields/CO2_Customer_Buy_Sell__c.field-meta.xml
<CustomField>
    <fullName>CO2_Customer_Buy_Sell__c</fullName>
    <inlineHelpText>This is what the customer does - If Customer Buys - Enter ....Buy</inlineHelpText>
    <label>CO2- Customer Buy/Sell</label>
    <length>10</length>
    <type>Text</type>
</CustomField>