force-app/main/default/objects/Opportunity/fields/CO2_Deal_done_by_Shell_Trade__c.field-meta.xml
<CustomField>
    <fullName>CO2_Deal_done_by_Shell_Trade__c</fullName>
    <inlineHelpText>This is a deal done by Shell Trading for CF Customer</inlineHelpText>
    <label>CO2 -Shell Trading Margin $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>