force-app/main/default/objects/Opportunity/fields/CO2_Delivery_Date_of_Allowances__c.field-meta.xml
<CustomField>
    <fullName>CO2_Delivery_Date_of_Allowances__c</fullName>
    <inlineHelpText>Date at which allowances need to be transfered to customer</inlineHelpText>
    <label>CO2 - Delivery Date of Allowance</label>
    <type>Date</type>
</CustomField>