force-app/main/default/objects/Opportunity/fields/CO2_FX_rate_to_get_US_Tonne__c.field-meta.xml
<CustomField>
    <fullName>CO2_FX_rate_to_get_US_Tonne__c</fullName>
    <label>CO2 - FX rate to get US$/Tonne</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>