force-app/main/default/objects/Opportunity/fields/CO2_Instrument__c.field-meta.xml
<CustomField>
    <fullName>CO2_Instrument__c</fullName>
    <label>CO2- Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Forward Fixed</fullName>
            </value>
            <value>
                <fullName>Forward Floating</fullName>
            </value>
            <value>
                <fullName>Spread</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>