force-app/main/default/objects/Opportunity/fields/CO2_Margin_tonne_on_deal__c.field-meta.xml
<CustomField>
    <fullName>CO2_Margin_tonne_on_deal__c</fullName>
    <formula>CO2_Price_to_Customer__c -  CO2_Price_STASCO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the margin in local currency</inlineHelpText>
    <label>CO2- GC Euro Margin/t on deal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>