force-app/main/default/objects/Opportunity/fields/CO2_Number_of_allowances__c.field-meta.xml
<CustomField>
    <fullName>CO2_Number_of_allowances__c</fullName>
    <inlineHelpText>How many allowances were sold/bought</inlineHelpText>
    <label>CO2 - Number of allowances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>