force-app/main/default/objects/Opportunity/fields/CO2_Overall_Margin_T__c.field-meta.xml
<CustomField>
    <fullName>CO2_Overall_Margin_T__c</fullName>
    <formula>CO2_Total_Margin__c  /  CO2_Number_of_allowances__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO2 - Overall Margin ($/T) to Shell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>