force-app/main/default/objects/Opportunity/fields/CO2_PFE_on_Deal__c.field-meta.xml
<CustomField>
    <fullName>CO2_PFE_on_Deal__c</fullName>
    <label>CO2 - PFE on deal $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>