force-app/main/default/objects/Opportunity/fields/CO2_Price_STASCO__c.field-meta.xml
<CustomField>
    <fullName>CO2_Price_STASCO__c</fullName>
    <inlineHelpText>This is the price GC paid/received via Shell Trading</inlineHelpText>
    <label>CO2-Price-STASCO</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>