force-app/main/default/objects/Opportunity/fields/CO2_Price_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>CO2_Price_to_Customer__c</fullName>
    <inlineHelpText>This is the price Shell OU charged the customer.</inlineHelpText>
    <label>CO2-Price - Customer</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>