force-app/main/default/objects/Opportunity/fields/CO2_Product__c.field-meta.xml
<CustomField>
    <fullName>CO2_Product__c</fullName>
    <label>CO2- Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CER</fullName>
            </value>
            <value>
                <fullName>CER or ERU</fullName>
            </value>
            <value>
                <fullName>EUA</fullName>
            </value>
            <value>
                <fullName>EUA/ or AEUA</fullName>
            </value>
            <value>
                <fullName>EUAA</fullName>
            </value>
            <value>
                <fullName>EUA or EUAA</fullName>
            </value>
            <value>
                <fullName>Spread EUA/CER</fullName>
            </value>
            <value>
                <fullName>Spread EUAA/CER</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>