force-app/main/default/objects/Opportunity/fields/CO2_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>CO2_Security_Deposit__c</fullName>
    <description>Security deposit to be received from Custome for Forward deals to avoid exposure</description>
    <label>CO2 - Security Deposit $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>