force-app/main/default/objects/Opportunity/fields/CO2_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>CO2_Total_Margin__c</fullName>
    <formula>CO2_Total_Margin_US__c + CO2_Deal_done_by_Shell_Trade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO2 - Total Margin to Shell ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>