force-app/main/default/objects/Opportunity/fields/CO2_Total_Margin_US__c.field-meta.xml
<CustomField>
    <fullName>CO2_Total_Margin_US__c</fullName>
    <formula>CO2_US_Margin_T__c  *  CO2_Number_of_allowances__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the margin in US$ at time of doing the deal (converted)</inlineHelpText>
    <label>CO2- GC Margin US$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>