force-app/main/default/objects/Opportunity/fields/CO2_US_Margin_T__c.field-meta.xml
<CustomField>
    <fullName>CO2_US_Margin_T__c</fullName>
    <formula>CO2_Margin_tonne_on_deal__c  *  CO2_FX_rate_to_get_US_Tonne__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To get the margin in US$ on deal at time of the deal.</inlineHelpText>
    <label>CO2- GC  US$ Margin/T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>