force-app/main/default/objects/Opportunity/fields/CO2_XPFE__c.field-meta.xml
<CustomField>
    <fullName>CO2_XPFE__c</fullName>
    <formula>Account.CO2_Contingent_Credit_Limit__c -  CO2_PFE_on_Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO2 - XPFE $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>