force-app/main/default/objects/Opportunity/fields/Co_efficient__c.field-meta.xml
<CustomField>
    <fullName>Co_efficient__c</fullName>
    <label>Co-efficient</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>