force-app/main/default/objects/Opportunity/fields/Comments_1__c.field-meta.xml
<CustomField>
    <fullName>Comments_1__c</fullName>
    <label>Comments 1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>