force-app/main/default/objects/Opportunity/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Benzene</fullName>
            </value>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Ethylene</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Fuel oil</fullName>
            </value>
            <value>
                <fullName>Gas oil</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>MEG</fullName>
            </value>
            <value>
                <fullName>Naphtha</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paraxylene</fullName>
            </value>
            <value>
                <fullName>Polyethylene</fullName>
            </value>
            <value>
                <fullName>Polypropylene</fullName>
            </value>
            <value>
                <fullName>Propylene</fullName>
            </value>
            <value>
                <fullName>Styrene</fullName>
            </value>
            <value>
                <fullName>Toluene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>